// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-trackey destination: identifyUser action - all fields 1`] = `
Object {
  "messageId": "4lC*xBPj6Zf^iE3J1PF",
  "timestamp": "4lC*xBPj6Zf^iE3J1PF",
  "traits": Object {
    "testType": "4lC*xBPj6Zf^iE3J1PF",
  },
  "userId": "4lC*xBPj6Zf^iE3J1PF",
}
`;

exports[`Testing snapshot for actions-trackey destination: identifyUser action - required fields 1`] = `
Object {
  "timestamp": "4lC*xBPj6Zf^iE3J1PF",
  "userId": "4lC*xBPj6Zf^iE3J1PF",
}
`;

exports[`Testing snapshot for actions-trackey destination: registerCompany action - all fields 1`] = `
Object {
  "groupId": "dv8xxzqiX16YI!L#st",
  "messageId": "dv8xxzqiX16YI!L#st",
  "timestamp": "dv8xxzqiX16YI!L#st",
  "traits": Object {
    "testType": "dv8xxzqiX16YI!L#st",
  },
  "userId": "dv8xxzqiX16YI!L#st",
}
`;

exports[`Testing snapshot for actions-trackey destination: registerCompany action - required fields 1`] = `
Object {
  "groupId": "dv8xxzqiX16YI!L#st",
  "timestamp": "dv8xxzqiX16YI!L#st",
  "userId": "dv8xxzqiX16YI!L#st",
}
`;

exports[`Testing snapshot for actions-trackey destination: trackEvent action - all fields 1`] = `
Object {
  "event": "qnx]3%$)][Qxz",
  "groupId": Object {
    "testType": "qnx]3%$)][Qxz",
  },
  "messageId": "qnx]3%$)][Qxz",
  "properties": Object {
    "testType": "qnx]3%$)][Qxz",
  },
  "timestamp": "qnx]3%$)][Qxz",
  "userId": "qnx]3%$)][Qxz",
}
`;

exports[`Testing snapshot for actions-trackey destination: trackEvent action - required fields 1`] = `
Object {
  "event": "qnx]3%$)][Qxz",
  "timestamp": "qnx]3%$)][Qxz",
  "userId": "qnx]3%$)][Qxz",
}
`;
